--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Never Cinderella
 email: raphaelle@nevercinderella.com
-description: Let's talk about fashion and dating in the 21st Century.
+description: Let's talk about fashion and life in the 21st Century.
 baseurl: ""
 url: "http://nevercinderella.com"
 
