--- a/_data/lookbooks.yml
+++ b/_data/lookbooks.yml
@@ -1,4 +1,5 @@
 - id: raphaelleheaf/love-accessories
+- id: raphaelleheaf/ss15-lookbook
 - id: raphaelleheaf/aw14-lookbook
 - id: raphaelleheaf/raphaelle-decoration-the-new-house
 
